# InspecaoPEC_Transf

./: CMakeLists.txt  README.md  diagram.json  projeto_residencia.c  wokwi.toml
